ajustes menores de fuentes

--- a/recursos.html
+++ b/recursos.html
@@ -1,79 +1,158 @@
 <!DOCTYPE html>
 <html lang="es"><head>
-    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recursos - Desarrollo y Diseño Web + IA</title>    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="assets/imgs/icon.png">
+    <title>Recursos - Desarrollo y Diseño Web + IA</title>    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/recursos.css">    
 </head><body>
-    <header>        <h1>Desarrollo y Diseño Web + IA</h1>
-        <nav>            <ul>
-                <li><a href="index.html">Inicio</a></li>                <li>
-                    <a href="#">Semanas ▾</a>                    <ul>
-                        <li><a href="semanas/semana2/index.html">Semana 2</a></li>                        <li><a href="semanas/semana3/index.html">Semana 3</a></li>
-                        <li><a href="semanas/semana4/index.html">Semana 4</a></li>                        <li><a href="semanas/semana5/index.html">Semana 5</a></li>
-                        <li><a href="semanas/semana6/index.html">Semana 6</a></li>                        <li><a href="semanas/semana7/index.html">Semana 7</a></li>
-                        <li><a href="semanas/semana8/index.html">Semana 8</a></li>                        <li><a href="semanas/semana9/index.html">Semana 9</a></li>
-                    </ul>                </li>
-                <li><a href="recursos.html">Recursos</a></li>            </ul>
-        </nav>    </header>
+    <header>        
+        <h1>Desarrollo y Diseño Web + IA</h1>
+        <nav>            
+            <ul>
+                <li><a href="index.html">Inicio</a></li>                
+                <li><a href="#">Semanas ▾</a>                    
+                    <ul>
+                        <li><a href="semanas/semana2/index.html">Semana 2</a></li>                        
+                        <li><a href="semanas/semana3/index.html">Semana 3</a></li>
+                        <li><a href="semanas/semana4/index.html">Semana 4</a></li>                        
+                        <li><a href="semanas/semana5/index.html">Semana 5</a></li>
+                        <li><a href="semanas/semana6/index.html">Semana 6</a></li>                        
+                        <li><a href="semanas/semana7/index.html">Semana 7</a></li>
+                        <li><a href="semanas/semana8/index.html">Semana 8</a></li>                        
+                        <li><a href="semanas/semana9/index.html">Semana 9</a></li>
+                    </ul>                
+                </li>
+                <li><a href="recursos.html">Recursos</a></li>            
+            </ul>
+        </nav>    
+    </header>
     <main>
         <h1>Recursos y Herramientas</h1>        
-        <section>            <h2>Herramientas Esenciales para el Curso</h2>
-            <p>A continuación encontrarás las herramientas que utilizaremos durante el curso de Desarrollo y Diseño Web + IA. Cada una de estas herramientas es fundamental para el desarrollo de los proyectos y actividades prácticas.</p>            
-            <div class="recursos-container">                <!-- Visual Studio Code -->
-                <div class="recurso-card">                    <i class="fas fa-code recurso-icon"></i>
-                    <h3>Visual Studio Code</h3>                    <p>Editor de código fuente desarrollado por Microsoft. Incluye soporte para depuración, control de Git integrado, resaltado de sintaxis, y extensiones para múltiples lenguajes.</p>
-                    <a href="https://code.visualstudio.com/download" target="_blank" class="btn-recurso">                        <i class="fas fa-download"></i> Descargar VS Code
-                    </a>                </div>
+        <section>            
+            <h2>Herramientas Esenciales para el Curso</h2>
+            <p>A continuación encontrarás las herramientas que utilizaremos durante el curso de Desarrollo y Diseño Web + IA. 
+                Cada una de estas herramientas es fundamental para el desarrollo de los proyectos y actividades prácticas.</p>            
+            <div class="recursos-container">
+                <!-- Visual Studio Code -->
+                <div class="recurso-card">                    
+                    <i class="fas fa-code recurso-icon"></i>
+                    <h3>Visual Studio Code</h3>                    
+                    <p>Editor de código fuente desarrollado por Microsoft. Incluye soporte para depuración, control de Git integrado, 
+                        resaltado de sintaxis, y extensiones para múltiples lenguajes.</p>
+                    <a href="https://code.visualstudio.com/download" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-download"></i> Descargar VS Code
+                    </a>                
+                </div>
                                 <!-- Figma -->
-                <div class="recurso-card">                    <i class="fab fa-figma recurso-icon"></i>
-                    <h3>Figma</h3>                    <p>Herramienta de diseño de interfaces basada en la web. Permite crear prototipos, wireframes y diseños colaborativos en tiempo real.</p>
-                    <a href="https://www.figma.com/" target="_blank" class="btn-recurso">                        <i class="fas fa-external-link-alt"></i> Ir a Figma
-                    </a>                </div>
+                <div class="recurso-card">                    
+                    <i class="fab fa-figma recurso-icon"></i>
+                    <h3>Figma</h3>                    
+                    <p>Herramienta de diseño de interfaces basada en la web. Permite crear prototipos, wireframes y diseños colaborativos en tiempo real.</p>
+                    <a href="https://www.figma.com/" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-external-link-alt"></i> Ir a Figma
+                    </a>                
+                </div>
                                 <!-- GitHub -->
-                <div class="recurso-card">                    <i class="fab fa-github recurso-icon"></i>
-                    <h3>GitHub</h3>                    <p>Plataforma de desarrollo colaborativo para alojar proyectos utilizando el sistema de control de versiones Git. Esencial para el trabajo en equipo.</p>
-                    <a href="https://github.com/" target="_blank" class="btn-recurso">                        <i class="fas fa-external-link-alt"></i> Ir a GitHub
-                    </a>                </div>
+                <div class="recurso-card">                    
+                    <i class="fab fa-github recurso-icon"></i>
+                    <h3>GitHub</h3>                    
+                    <p>Plataforma de desarrollo colaborativo para alojar proyectos utilizando el sistema de control de versiones Git. Esencial para el trabajo en equipo.</p>
+                    <a href="https://github.com/" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-external-link-alt"></i> Ir a GitHub
+                    </a>                
+                </div>
                                 <!-- XAMPP -->
-                <div class="recurso-card">                    <i class="fas fa-server recurso-icon"></i>
-                    <h3>XAMPP</h3>                    <p>Distribución de Apache que contiene MariaDB, PHP y Perl. Permite instalar de forma sencilla un servidor local para desarrollo web.</p>
-                    <a href="https://www.apachefriends.org/download.html" target="_blank" class="btn-recurso">                        <i class="fas fa-download"></i> Descargar XAMPP
-                    </a>                </div>
+                <div class="recurso-card">                    
+                    <i class="fas fa-server recurso-icon"></i>
+                    <h3>XAMPP</h3>                    
+                    <p>Distribución de Apache que contiene MariaDB, PHP y Perl. Permite instalar de forma sencilla un servidor local para desarrollo web.</p>
+                    <a href="https://www.apachefriends.org/download.html" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-download"></i> Descargar XAMPP
+                    </a>                
+                </div>
                                 <!-- WAMP -->
-                <div class="recurso-card">                    <i class="fas fa-database recurso-icon"></i>
-                    <h3>WAMP</h3>                    <p>Entorno de desarrollo web para Windows que incluye Apache, MySQL y PHP. Alternativa a XAMPP para sistemas Windows.</p>
-                    <a href="https://www.wampserver.com/en/download-wampserver-64bits/" target="_blank" class="btn-recurso">                        <i class="fas fa-download"></i> Descargar WAMP
-                    </a>                </div>
+                <div class="recurso-card">                    
+                    <i class="fas fa-database recurso-icon"></i>
+                    <h3>WAMP</h3>                    
+                    <p>Entorno de desarrollo web para Windows que incluye Apache, MySQL y PHP. Alternativa a XAMPP para sistemas Windows.</p>
+                    <a href="https://www.wampserver.com/en/download-wampserver-64bits/" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-download"></i> Descargar WAMP
+                    </a>                
+                </div>
                                 <!-- W3C -->
-                <div class="recurso-card">                    <i class="fas fa-check-circle recurso-icon"></i>
-                    <h3>W3C Validator</h3>                    <p>Servicio de validación de código HTML y CSS del World Wide Web Consortium. Verifica que tu código cumpla con los estándares web.</p>
-                    <a href="https://validator.w3.org/" target="_blank" class="btn-recurso">                        <i class="fas fa-external-link-alt"></i> Ir a W3C Validator
-                    </a>                </div>
+                <div class="recurso-card">                    
+                    <i class="fas fa-check-circle recurso-icon"></i>
+                    <h3>W3C Validator</h3>                    
+                    <p>Servicio de validación de código HTML y CSS del World Wide Web Consortium. Verifica que tu código cumpla con los estándares web.</p>
+                    <a href="https://validator.w3.org/" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-external-link-alt"></i> Ir a W3C Validator
+                    </a>                
+                </div>
                                 <!-- W3Schools -->
-                <div class="recurso-card">                    <i class="fas fa-graduation-cap recurso-icon"></i>
-                    <h3>W3Schools</h3>                    <p>Sitio web educativo con tutoriales y referencias sobre lenguajes de desarrollo web como HTML, CSS, JavaScript, PHP, SQL y más.</p>
-                    <a href="https://www.w3schools.com/" target="_blank" class="btn-recurso">                        <i class="fas fa-external-link-alt"></i> Ir a W3Schools
-                    </a>                </div>
+                <div class="recurso-card">                    
+                    <i class="fas fa-graduation-cap recurso-icon"></i>
+                    <h3>W3Schools</h3>                    
+                    <p>Sitio web educativo con tutoriales y referencias sobre lenguajes de desarrollo web como HTML, CSS, JavaScript, PHP, SQL y más.</p>
+                    <a href="https://www.w3schools.com/" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-external-link-alt"></i> Ir a W3Schools
+                    </a>                
+                </div>
                                 <!-- Bootstrap -->
-                <div class="recurso-card">                    <i class="fab fa-bootstrap recurso-icon"></i>
-                    <h3>Bootstrap</h3>                    <p>Framework CSS y JavaScript para diseño de sitios web responsivos y móviles. Facilita la creación de interfaces modernas y consistentes.</p>
-                    <a href="https://getbootstrap.com/" target="_blank" class="btn-recurso">                        <i class="fas fa-external-link-alt"></i> Ir a Bootstrap
-                    </a>                </div>
-            </div>        </section>
-                <section>
-            <h2>Extensiones Recomendadas para VS Code</h2>            <ul>
-                <li><strong>Live Server</strong>: Lanza un servidor local con recarga en vivo para páginas estáticas y dinámicas.</li>                <li><strong>HTML CSS Support</strong>: Proporciona autocompletado para HTML y CSS.</li>
-                <li><strong>Prettier</strong>: Formateador de código para mantener un estilo consistente.</li>                <li><strong>ESLint</strong>: Integra ESLint en VS Code para detectar problemas en el código JavaScript.</li>
-                <li><strong>PHP Intelephense</strong>: Proporciona autocompletado y análisis de código PHP.</li>                <li><strong>GitLens</strong>: Mejora las capacidades de Git en VS Code.</li>
-            </ul>        </section>
-                <section>
-            <h2>Recursos Adicionales</h2>            <ul>
-                <li><a href="https://developer.mozilla.org/es/" target="_blank">MDN Web Docs</a>: Documentación completa sobre tecnologías web.</li>                <li><a href="https://css-tricks.com/" target="_blank">CSS-Tricks</a>: Tutoriales y trucos para CSS.</li>
-                <li><a href="https://www.php.net/manual/es/" target="_blank">Manual de PHP</a>: Documentación oficial de PHP.</li>                <li><a href="https://dev.mysql.com/doc/" target="_blank">Documentación MySQL</a>: Referencia completa de MySQL.</li>
-            </ul>        </section>
+                <div class="recurso-card">                    
+                    <i class="fab fa-bootstrap recurso-icon"></i>
+                    <h3>Bootstrap</h3>                    
+                    <p>Framework CSS y JavaScript para diseño de sitios web responsivos y móviles. Facilita la creación de interfaces modernas y consistentes.</p>
+                    <a href="https://getbootstrap.com/" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-external-link-alt"></i> Ir a Bootstrap
+                    </a>                
+                </div>
+                                <!-- Filezilla -->
+                <div class="recurso-card">                    
+                    <i class="fas fa-file-upload recurso-icon"></i>
+                    <h3>Filezilla</h3>                    
+                    <p>Cliente FTP de código abierto que permite transferir archivos entre un servidor y un cliente.</p>
+                    <a href="https://filezilla-project.org/download.php/" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-external-link-alt"></i> Ir a W3Schools
+                    </a>                
+                </div>
+                                <!-- CoreFTP -->
+                <div class="recurso-card">                    
+                    <i class="fas fa-file-upload recurso-icon"></i>
+                    <h3>CoreFTP</h3>                    
+                    <p>Cliente FTP de código abierto, alternativa más ligera que Filezilla y que también permite transferir archivos entre un servidor y un cliente.</p>
+                    <a href="https://www.coreftp.com/download.html/" target="_blank" class="btn-recurso">                        
+                        <i class="fas fa-external-link-alt"></i> Ir a Bootstrap
+                    </a>                
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>Extensiones Recomendadas para VS Code</h2>            
+            <ul>
+                <li><strong>Live Server</strong>: Lanza un servidor local con recarga en vivo para páginas estáticas y dinámicas.</li>                
+                <li><strong>HTML CSS Support</strong>: Proporciona autocompletado para HTML y CSS.</li>
+                <li><strong>Prettier</strong>: Formateador de código para mantener un estilo consistente.</li>                
+                <li><strong>ESLint</strong>: Integra ESLint en VS Code para detectar problemas en el código JavaScript.</li>
+                <li><strong>PHP Intelephense</strong>: Proporciona autocompletado y análisis de código PHP.</li>                
+                <li><strong>GitLens</strong>: Mejora las capacidades de Git en VS Code.</li>
+            </ul>        
+        </section>
+        <section>
+            <h2>Recursos Adicionales</h2>            
+            <ul>
+                <li><a href="https://developer.mozilla.org/es/" target="_blank">MDN Web Docs</a>: Documentación completa sobre tecnologías web.</li>                
+                <li><a href="https://css-tricks.com/" target="_blank">CSS-Tricks</a>: Tutoriales y trucos para CSS.</li>
+                <li><a href="https://www.php.net/manual/es/" target="_blank">Manual de PHP</a>: Documentación oficial de PHP.</li>                
+                <li><a href="https://dev.mysql.com/doc/" target="_blank">Documentación MySQL</a>: Referencia completa de MySQL.</li>
+            </ul>        
+        </section>
     </main>
-    <footer>        <p>© 2025 Diseño y Desarrollo Web + IA - TEC UCT - Docente: Cristian Iglesias Vera - cristian.iglesias@uct.cl</p>
+    <footer>        
+        <p>© 2025 Diseño y Desarrollo Web + IA - TEC UCT - Docente: Cristian Iglesias Vera - cristian.iglesias@uct.cl</p>
     </footer>
 </body>
 </html>
