--- a/semanas/semana4/box-model.html
+++ b/semanas/semana4/box-model.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="../../assets/imgs/icon.png">
     <title>Ejemplo del Box Model</title>
     <link rel="stylesheet" href="../../assets/css/semanas/semana4/style.css">
     <link rel="stylesheet" href="../../assets/css/semanas/semana4/box-model.css">
