--- a/semanas/semana8/frontend/view.html
+++ b/semanas/semana8/frontend/view.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" href="../../../assets/imgs/icon.png">
   <title>Ver Post - Blog CMS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.4.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../../assets/css/semanas/semana8/style.css">
