--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>GSAP Observer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" href="assets/imgs/icon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <title>Inicio</title>
   <link rel="stylesheet" href="https://public.codepenassets.com/css/reset-2.0.min.css">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap'>
   <link rel="stylesheet" href="assets/css/styles.css">
