--- a/semanas/semana4/index.html
+++ b/semanas/semana4/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" href="../../assets/imgs/icon.png">
   <title>Semana 4 - Desarrollo Web</title>
   <link rel="stylesheet" href="../../assets/css/semanas/semana4/style.css">
 </head>
