--- a/semanas/semana6/index.html
+++ b/semanas/semana6/index.html
@@ -2,7 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="../../assets/imgs/icon.png">
     <title>Optimización SEO y Accesibilidad</title>
     <link rel="stylesheet" href="../../assets/css/semanas/semana6/style.css">
 </head>
