ajustes menores de fuentes

--- a/recursos.html
+++ b/recursos.html
@@ -116,7 +116,7 @@
                     <h3>Filezilla</h3>                    
                     <p>Cliente FTP de código abierto que permite transferir archivos entre un servidor y un cliente.</p>
                     <a href="https://filezilla-project.org/download.php/" target="_blank" class="btn-recurso">                        
-                        <i class="fas fa-external-link-alt"></i> Ir a W3Schools
+                        <i class="fas fa-external-link-alt"></i> Ir a Filezilla
                     </a>                
                 </div>
                                 <!-- CoreFTP -->
@@ -125,7 +125,7 @@
                     <h3>CoreFTP</h3>                    
                     <p>Cliente FTP de código abierto, alternativa más ligera que Filezilla y que también permite transferir archivos entre un servidor y un cliente.</p>
                     <a href="https://www.coreftp.com/download.html/" target="_blank" class="btn-recurso">                        
-                        <i class="fas fa-external-link-alt"></i> Ir a Bootstrap
+                        <i class="fas fa-external-link-alt"></i> Ir a CoreFTP
                     </a>                
                 </div>
             </div>
