Se agregó un nuevo ejercicio de un blog simple

--- a/semanas/semana8/index.html
+++ b/semanas/semana8/index.html
@@ -28,6 +28,7 @@
           <a href="#">Semana 8 ▾</a>
           <ul>
             <li><a href="frontend/blog.html">Blog CMS</a></li>
+            <li><a href="simple-blog/index.html">Blog Simple</a></li>
           </ul>
         </li>
         <li><a href="../semana9/index.html">Semana 9</a></li>
