se agrego tarea autonoma y se cambió la API por pokeapi

--- a/semanas/semana8/index.html
+++ b/semanas/semana8/index.html
@@ -31,7 +31,13 @@
             <li><a href="simple-blog/index.html">Blog Simple</a></li>
           </ul>
         </li>
-        <li><a href="../semana9/index.html">Semana 9</a></li>
+        <li>
+          <a href="#">Semana 9 ▾</a>
+          <ul>
+            <li><a href="../semana9/index.html">Resumen Semana 9</a></li>
+            <li><a href="../semana9/api/patentes-chile.html">API Ejemplo</a></li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </header>
