actualizacion general y habilitacion GSAP

--- a/secciones.html
+++ b/secciones.html
@@ -19,6 +19,7 @@
                 <li>
                     <a href="#">Semanas ▾</a>
                     <ul>
+                        <li><a href="semanas/semana1/index.html">Semana 1</a></li>
                         <li><a href="semanas/semana2/index.html">Semana 2</a></li>
                         <li><a href="semanas/semana3/index.html">Semana 3</a></li>
                         <li><a href="semanas/semana4/index.html">Semana 4</a></li>
