--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" href="assets/imgs/icon.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <title>Inicio</title>
-  <link rel="stylesheet" href="https://public.codepenassets.com/css/reset-2.0.min.css">
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap'>
-  <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!--
-Author: Fabio Ottaviani
-Link: https://linktr.ee/supahfunk
--->
-<h1>Desarrollo y Diseño Web + IA</h1>
-<div class="carousel">
-  <a href="recursos.html"><div class="carousel-image">Recursos</div></a>
-  <a href="semanas/semana1/index.html"><div class="carousel-image">Semana 1</div></a>
-  <a href="semanas/semana2/index.html"><div class="carousel-image">Semana 2</div></a>
-  <a href="semanas/semana3/index.html"><div class="carousel-image">Semana 3</div></a>
-  <a href="semanas/semana4/index.html"><div class="carousel-image">Semana 4</div></a>
-  <a href="semanas/semana5/index.html"><div class="carousel-image">Semana 5</div></a>
-  <a href="semanas/semana6/index.html"><div class="carousel-image">Semana 6</div></a>
-  <a href="semanas/semana7/index.html"><div class="carousel-image">Semana 7</div></a>
-  <a href="semanas/semana8/index.html"><div class="carousel-image">Semana 8</div></a>
-  <a href="semanas/semana9/index.html"><div class="carousel-image">Semana 9</div></a>
-  <a href="#"><div class="carousel-image">Semana 10</div></a>
-  <a href="#"><div class="carousel-image">Semana 11</div></a>
-  <a href="#"><div class="carousel-image">Semana 12</div></a>
-  <a href="#"><div class="carousel-image">Semana 13</div></a>
-  <a href="#"><div class="carousel-image">Semana 14</div></a>
-  <a href="#"><div class="carousel-image">Semana 15</div></a>
-  <a href="#"><div class="carousel-image">Semana 16</div></a>
-  <a href="#"><div class="carousel-image">Semana 17</div></a>
-  <a href="secciones.html"><div class="carousel-image">Secciones</div></a>
-</div>
-<!-- partial -->
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?v=3.10.0e'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js?v=3.10.0e'></script>
-<script src='https://assets.codepen.io/16327/ScrollSmoother.min.js?v=3.10.0e'></script>
-<script src="assets/js/script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="assets/imgs/icon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Inicio</title>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap'>
+    <link rel="stylesheet" href="assets/css/styles.css">
+  </head>
+  <body>
+    <img src="assets/imgs/tec-uct.png" class="mx-auto d-block mt-2" alt="Logo TEC UCT">
+    <h1>Desarrollo y Diseño Web + IA (TINF1113)</h1>
+    <div class="carousel">
+      <a href="recursos.html"><div class="carousel-image">Recursos</div></a>
+      <a href="semanas/semana1/index.html"><div class="carousel-image">Semana 1</div></a>
+      <a href="semanas/semana2/index.html"><div class="carousel-image">Semana 2</div></a>
+      <a href="semanas/semana3/index.html"><div class="carousel-image">Semana 3</div></a>
+      <a href="semanas/semana4/index.html"><div class="carousel-image">Semana 4</div></a>
+      <a href="semanas/semana5/index.html"><div class="carousel-image">Semana 5</div></a>
+      <a href="semanas/semana6/index.html"><div class="carousel-image">Semana 6</div></a>
+      <a href="semanas/semana7/index.html"><div class="carousel-image">Semana 7</div></a>
+      <a href="semanas/semana8/index.html"><div class="carousel-image">Semana 8</div></a>
+      <a href="semanas/semana9/index.html"><div class="carousel-image">Semana 9</div></a>
+      <a href="#"><div class="carousel-image">Semana 10</div></a>
+      <a href="#"><div class="carousel-image">Semana 11</div></a>
+      <a href="#"><div class="carousel-image">Semana 12</div></a>
+      <a href="#"><div class="carousel-image">Semana 13</div></a>
+      <a href="#"><div class="carousel-image">Semana 14</div></a>
+      <a href="#"><div class="carousel-image">Semana 15</div></a>
+      <a href="#"><div class="carousel-image">Semana 16</div></a>
+      <a href="#"><div class="carousel-image">Semana 17</div></a>
+      <a href="secciones.html"><div class="carousel-image">Secciones</div></a>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
