--- a/semanas/semana2/index.html
+++ b/semanas/semana2/index.html
@@ -14,7 +14,19 @@
     <nav>
       <ul>
         <li><a href="../../index.html">Inicio</a></li>
-        <li><a href="../semana1/index.html">Semana 1</a></li>
+        <li>
+          <a href="#">Semana 1 ▾</a>
+          <ul>
+            <li><a href="../semana1/index.html">Resumen Semana 1</a></li>
+            <li><a href="../semana1/imagenes.html">Imagen de Ejmemplo</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Semana 2 ▾</a>
+          <ul>
+            <li><a href="semana2.html">Conceptos</a></li>
+          </ul>
+        </li>
         <li>
           <a href="#">Semana 3 ▾</a>
           <ul>
