Corrección de errores semana 1

--- a/semanas/semana2/semana2.html
+++ b/semanas/semana2/semana2.html
@@ -17,7 +17,8 @@
           <a href="#">Semana 1 ▾</a>
           <ul>
             <li><a href="../semana1/index.html">Resumen Semana 1</a></li>
-            <li><a href="../semana1/imagenes.html">Imagen de Ejmemplo</a></li>
+            <li><a href="../semana1/imagenes.html">Imagen de Ejemplo</a></li>
+            <li><a href="../semana1/diagnostico.html">Evaluación de Diagnóstico</a></li>
           </ul>
         </li>
         <li>
